backend/src/main/java/com/example/syncmeet/error/exception/RequestException.java
package com.example.syncmeet.error.exception;

public class RequestException extends RuntimeException{
    public RequestException(String message) {
        super(message);
    }
}
